fixed Logout Link

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -72,11 +72,11 @@
       class="hiddenDropdown display-none"
       onmouseleave="closeHiddenDropdown(event)"
     >
-      <a href="../help.html" id="hiddenDropdown-help">Help</a>
-      <a href="../legal.html" id="hiddenDropdown-legal">Legal notice</a>
-      <a href="../privacy.html" id="hiddenDropdown-privacy">Privacy Policy</a>
-      <a href="../index.html" id="hiddenDropdown-logout">Log out</a>
-      <a href="../imprint.html" id="hiddenDropdown-imprint">Impressum</a>
+      <a href="./help.html" id="hiddenDropdown-help">Help</a>
+      <a href="./legal.html" id="hiddenDropdown-legal">Legal notice</a>
+      <a href="./privacy.html" id="hiddenDropdown-privacy">Privacy Policy</a>
+      <a href="./index.html" id="hiddenDropdown-logout">Log out</a>
+      <a href="./imprint.html" id="hiddenDropdown-imprint">Impressum</a>
     </div>
   </div>
 </body>
