--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -187,7 +187,7 @@ header {
 
 @media (max-width: 760px) {
   nav {
-    position: sticky;
+    position: fixed;
     width: 100vw;
     bottom: 0;
     left: 0;
