--- a/styles/privacy.css
+++ b/styles/privacy.css
@@ -40,7 +40,7 @@ body {
 
 .privacy-section p {
     color: #000;
-    font-family: Poppins;
+    font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -84,6 +84,11 @@ main {
     .privacy-svg {
         margin-top: 1px;
     }
+    p {
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        white-space: normal;
+      }
 }
 
 @media (max-width: 400px) {
