fixed the responsive sidebar (height and sizes, text gets shown now)

--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -89,7 +89,7 @@ header {
   font-weight: 700;
 }
 
-.navChild > a {
+.navChild>a {
   display: flex;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -97,12 +97,12 @@ header {
   margin-bottom: 8px;
 }
 
-.navChild > a:hover {
+.navChild>a:hover {
   background-color: rgba(9, 25, 49, 255);
   cursor: pointer;
 }
 
-.navChild > a img {
+.navChild>a img {
   padding-right: 8px;
 }
 
@@ -118,10 +118,12 @@ header {
   display: flex;
   width: 50%;
 }
+
 .legalNoticeDiv a {
   color: #a8a8a8 !important;
   cursor: pointer;
 }
+
 .legalNoticeDiv a:hover {
   color: #31aee3 !important;
   cursor: pointer;
@@ -175,6 +177,10 @@ header {
 
 .hiddenDropdown a:hover {
   color: white;
+}
+
+.padleft-3rem {
+  padding-left: 3rem;
 }
 
 /* RESPONSIVE */
@@ -242,8 +248,29 @@ header {
     display: none;
   }
 
-  .link-text {
-    display: none;
+  .padleft-3rem {
+    padding-left: 0;
+  }
+
+  nav {
+    display: flex;
+    height: 80px;
+    padding: 5px 16px;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+  }
+
+  .link {
+    display: flex;
+    width: 76px;
+    height: 76px;
+    padding: 15px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    flex-shrink: 0;
   }
 }
 
@@ -258,7 +285,6 @@ header {
     will-change: transform;
     transform: translateZ(0);
     display: flex;
-    height: 32px;
     box-sizing: border-box;
   }
 
@@ -300,18 +326,17 @@ header {
     display: none;
   }
 
-  .link-text {
-    display: none;
-  }
 }
 
 @media (min-width: 761px) {
   #hiddenDropdown-help {
     display: none;
   }
+
   #hiddenDropdown-legal {
     display: none;
   }
+
   #hiddenDropdown-privacy {
     display: none;
   }
@@ -321,7 +346,32 @@ header {
   #hiddenDropdown-imprint {
     display: none;
   }
+
   .hiddenDropdown {
     top: -110px;
+  }
+
+  .link {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .link img {
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+  }
+
+  .navChild>a img {
+    padding-right: 0;
+  }
+
+  .navChild>a {
+    padding: 0;
+    margin: 0;
+  }
+
+  .ps-5 {
+    padding-left: 0 !important;
   }
 }
