--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,25 +7,25 @@
         </div>
 
         <div class="navChild w-100">
-          <a class="ps-5 summary-site" href="summary.html">
+          <a class="padleft-3rem summary-site" href="summary.html">
             <div class="link d-flex align-items-center">
               <img src="./img/summary.svg" alt="summary" />
               <div class="link-text">Summary</div>
             </div>
           </a>
-          <a class="ps-5 board-site" href="board.html">
+          <a class="padleft-3rem board-site" href="board.html">
             <div class="link d-flex align-items-center">
               <img src="./img/board.svg" alt="board" />
               <div class="link-text">Board</div>
             </div>
           </a>
-          <a class="ps-5 addtask-site" href="addtask.html">
+          <a class="padleft-3rem addtask-site" href="addtask.html">
             <div class="link d-flex align-items-center">
               <img class="w-38" src="./img/addTask.svg" alt="add task" />
               <div class="link-text">Add Task</div>
             </div>
           </a>
-          <a class="ps-5 contact-site" href="contacts.html">
+          <a class="padleft-3rem contact-site" href="contacts.html">
             <div class="link d-flex align-items-center">
               <img class="w-38" src="./img/contacts.svg" alt="contacts" />
               <div class="link-text">Contacts</div>
@@ -76,7 +76,7 @@
       <a href="./legal.html" id="hiddenDropdown-legal">Legal notice</a>
       <a href="./privacy.html" id="hiddenDropdown-privacy">Privacy Policy</a>
       <a href="./index.html" id="hiddenDropdown-logout">Log out</a>
-      <a href="./imprint.html" id="hiddenDropdown-imprint">Impressum</a>
+      <a href="./legal.html" id="hiddenDropdown-imprint">Imprint</a>
     </div>
   </div>
 </body>
