added redirection on question icon

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -52,11 +52,13 @@
         <div class="resp-logo">
           <img src="./img/logo_dark.svg" />
         </div>
+        <a href="help.html">
         <img
           class="icon-question"
           src="./img/icon_question.png"
           alt="question"
         />
+      </a>
         <div
           id="hiddenSidebarMenu"
           onclick="toggleHiddenDropdown()"
