redirection to summary, when clicked on logo

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,7 @@
     <nav>
       <div class="w-100 d-flex flex-column align-items-center">
         <div class="logoDiv">
-          <img src="./img/logo.svg" alt="JOIN" />
+          <a href="summary.html"><img src="./img/logo.svg" alt="JOIN" /></a>
         </div>
 
         <div class="navChild w-100">
@@ -50,7 +50,7 @@
       <div class="header-text">Kanban Project Management Tool</div>
       <div class="top-right-wrapper">
         <div class="resp-logo">
-          <img src="./img/logo_dark.svg" />
+          <a href="summary.html"><img src="./img/logo_dark.svg" /></a>
         </div>
         <a href="help.html">
         <img
