--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -375,3 +375,29 @@ header {
     margin: 0;
   }
 }
+
+@media (max-width: 350px) {
+  header {
+    padding: 0;
+  }
+  #hiddenSidebarMenu {
+    margin-right: 20px;
+    height: 45px;
+    width: 45px;
+    margin-top: 5px;
+  }
+  .link img {
+    height: 20px;
+    width: 20px;
+  }
+  .link-text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 300px) {
+  .link {
+    margin-left: -5px;
+    margin-right: -5px;
+  }
+}
