login, logout function

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -53,12 +53,12 @@
           <a href="summary.html"><img src="./img/logo_dark.svg" /></a>
         </div>
         <a href="help.html">
-        <img
-          class="icon-question"
-          src="./img/icon_question.png"
-          alt="question"
-        />
-      </a>
+          <img
+            class="icon-question"
+            src="./img/icon_question.png"
+            alt="question"
+          />
+        </a>
         <div
           id="hiddenSidebarMenu"
           onclick="toggleHiddenDropdown()"
@@ -77,7 +77,7 @@
       <a href="./help.html" id="hiddenDropdown-help">Help</a>
       <a href="./legal.html" id="hiddenDropdown-legal">Legal notice</a>
       <a href="./privacy.html" id="hiddenDropdown-privacy">Privacy Policy</a>
-      <a href="./index.html" id="hiddenDropdown-logout">Log out</a>
+      <a onclick="logout();" id="hiddenDropdown-logout">Log out</a>
       <a href="./legal.html" id="hiddenDropdown-imprint">Imprint</a>
     </div>
   </div>
