--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -565,7 +565,7 @@ body {
     display: block;
     position: absolute;
     right: 5%;
-    bottom: 20%;
+    bottom: 16%;
     border: unset;
     height: 80px;
     width: 80px;
@@ -703,8 +703,9 @@ body {
   }
 
   .custom-style-contacts {
-    margin-left: unset;
+    margin-left: 0px;
     width: 100%;
+    padding-bottom: 144px;
   }
 
   .dialog__blue-line {
@@ -914,10 +915,7 @@ body {
 
   .contacts-header {
     gap: 16px;
-    margin-top: 30px;
-  }
-
-  #contactsHeader {
+    margin-top: 30px;    
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -932,16 +930,16 @@ body {
   }
 }
 
+@media only screen and (max-width: 1001px) {
+  #dialogContact {
+    margin: 24px 0px 0px 0px;
+  }
+}
+
 @media only screen  and (max-width: 1250px) {
   #dialog__editContact, 
   #dialog__createContact {
     left: 20%;
-  }
-  #contactsListContainer {
-    width: 362px;
-  }
-  .seperator-vertical {
-    display: none;
   }
   
   #dialogContact {
