--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -159,6 +159,10 @@ header {
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
+#hiddenDropdown-logout {
+  color: #cdcdcd;
+}
+
 .hiddenDropdown a {
   display: flex;
   align-items: center;
