added sepeate sideBar hiddenDropdown color, so even if the link gets clicked once, the color gets shown corretly

--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -158,7 +158,10 @@ header {
   padding: 10px;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
-
+#hiddenDropdown-help,
+#hiddenDropdown-legal,
+#hiddenDropdown-privacy,
+#hiddenDropdown-imprint,
 #hiddenDropdown-logout {
   color: #cdcdcd;
 }
