gave the modal-backdrop display:none if the width is under 950px (at this size the user gets redirected to addTask-site - fixes styling issues below that width)

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -50,3 +50,9 @@
   background: rgba(0, 0, 0, 0.5) !important;
   z-index: 999;
 }
+
+@media(max-width: 949px) {
+  .modal-backdrop {
+    display: none !important;
+  }
+}
