--- a/styles/summary.css
+++ b/styles/summary.css
@@ -9,6 +9,11 @@
   background-color: rgba(246, 247, 248, 255);
 }
 
+.headline-container {
+  display: flex;
+  gap: 50px;
+}
+
 .summaryHeadlineText {
   border-right: 2px solid gray;
 }
