--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,232 +1,198 @@
-.parentDiv {
-  /* margin-top: -22px; */
-  margin-left: 232px;
-  height: calc(100vh - 91px);
-  width: calc(100% - 232px);
-  padding-top: 50px;
-  padding-left: 60px;
-  padding-bottom: 50px;
-  background-color: rgba(246, 247, 248, 255);
+/*Basic*/
+body {
+  margin: 0;
+  background: #F6F7F8;
 }
 
-.headline-container {
+h1 {
+  margin: 0;
+}
+
+.font-64 {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%;
+}
+
+.font-61 {
+  color: #000;
+  font-family: Inter;
+  font-size: 61px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+}
+
+.font-47 {
+  color: #2A3647;
+  font-family: Inter;
+  font-size: 47px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+.font-27 {
+  color: #2A3647;
+  font-family: Inter;
+  font-size: 27px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.font-21 {
+  color: #2A3647;
+  font-family: Inter;
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+}
+
+.font-20 {
+  color: #2A3647;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%
+}
+
+.font-16 {
+  color: #2A3647;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.custom-border {
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+  background: var(--white, #FFF);
+  border-radius: 30px;
+}
+
+/*Main*/
+
+.summary {
   display: flex;
-  gap: 50px;
+  flex-direction: column;
+  margin-left: 328px;
+  margin-top: 110px;
 }
 
-.summaryHeadlineText {
-  border-right: 2px solid gray;
-}
-
-.size3Em {
-  font-size: 3em;
-}
-
-.size2Em {
-  font-size: 2em;
-}
-
-.size08Em {
-  font-size: 0.8em;
-}
-
-.headline-container {
+.summary-content {
   display: flex;
+  gap: 60px;
   align-items: center;
 }
 
-.bold {
-  font-weight: bold;
-}
-
-.borderColorBlue {
-  border-color: #29abe2 !important;
-}
-
-.fontColorBlue {
-  color: #29abe2;
-}
-
-.blue-line {
-  display: none;
-}
-.firstContainer {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 15px;
-  /* background-color: rgb(162, 162, 255); */
-  /* width: 60%; */
-  /* display: flex;
-    flex-direction: column;
-    justify-content: space-around; */
-  /* margin: 60px; */
-}
-
-.item-1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  gap: 15px;
-}
-
-.item-2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  /* grid-auto-columns: max-content; */
-}
-
-.item-3 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  gap: 15px;
-}
-
-.firstContainer img {
-  height: 60px;
-}
-
-.secondContainer {
-  /* background-color: green; */
-  /* width: 40%; */
+.summary-header {
   display: flex;
+  gap: 30px;
   align-items: center;
+  margin-bottom: 57px;
 }
 
-.childDiv {
-  height: calc(100% - 72px);
-  display: grid;
-  grid-template-columns: 2fr 2fr;
-  grid-template-rows: 1fr;
+.main-top {
+  display: flex;
+  width: 560px;
+  height: 170px;
+  padding: 1px 0px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 28px;
+  flex-shrink: 0;
 }
 
-.noWrapWords {
-  white-space: nowrap;
+.task-boad,
+.task-progress,
+.task-feedback {
+  display: flex;
+  width: 168px;
+  height: 168px;
+  padding: 25px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
 }
 
-.bgWhite {
-  background-color: white;
-  transition: all 0.2s ease-in-out;
-}
-
-.bgWhite:hover {
-  cursor: pointer;
+.task-boad:hover,
+.task-progress:hover,
+.task-feedback:hover {
   background-color: rgba(42, 54, 71, 255);
-  color: white;
-  transform: scale(1.05);
+  color: white !important;
 }
 
-@media screen and (max-width: 1001px) {
-  .parentDiv {
-    padding-left: 16px;
-  }
-  
-  .childDiv {
-    display: grid;
-    grid-template-columns: unset;
-  }
 
-  .secondContainer {
-    display: none;
-  }
-}
-@media screen and (max-width: 825px) {
-  .firstContainer {
-    width: calc(75% + 30px);
-  }
-  .headline-container {
-    flex-direction: column;
-    gap: 0;
-    align-items: flex-start !important;
-  }
-  .headline-nutshell {
-    padding: 0 !important;
-  }
-  .childDiv {
-    height: auto;
-  }
-  .item-1 {
-    grid-template-columns: 25% 25% 25%;
-    width: calc(75% + 30px);
-  }
-  .item-2 {
-    width: calc(75% + 30px);
-  }
-  .item-3 {
-    grid-template-columns: calc(37.5% + 7.5px) calc(37.5% + 7.5px);
-    width: calc(75% + 30px);
-  }
+
+
+.main-middle {
+  display: flex;
+  width: 560px;
+  height: 168px;
+  padding: 28px 48px;
+  justify-content: center;
+  align-items: center;
+  gap: 61px;
+  flex-shrink: 0;
+  margin-top: 26.5px;
 }
 
-@media screen and (max-width: 760px) {
-  .parentDiv {
-    display: flex;
-    align-items: center !important;
-    max-width: 100vw;
-    overflow-x: hidden;
-    padding-bottom: 165px;
-    margin-left: 0;
-    padding-left: 0;
-    width: auto;
-  }
-  .childDiv {
-    display: flex;
-    margin: 0 auto;
-    max-width: 100%;
-  }
-  .summaryHeadlineText {
-    border: none !important;
-  }
-
-  .headline-container {
-    gap: 0px !important;
-    align-self: flex-start;
-    margin-left: 20px;
-  }
-
-  .blue-line {
-    display: block;
-    width: 40%;
-    height: 2px;
-    background-color: #29abe2;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-
-  .border-end {
-    border: none !important;
-  }
-
-  .item-1,
-  .item-2,
-  .item-3 {
-    justify-content: center;
-  }
-  .item-2 {
-    justify-self: center;
-  }
+.urgent-left {
+  display: flex;
+  align-items: center;
+  gap: 18px;
 }
 
-@media screen and (max-width: 510px) {
-  .parentDiv {
-    width: 100%;
-  }
-  .item-1 {
-    grid-template-columns: 20% 20% 20%;
-  }
-  .item-2 {
-    grid-template-columns: 50% 50%;
-    width: calc(60% + 30px);
-  }
-  .item-3 {
-    grid-template-columns: calc(30% + 7.5px) calc(30% + 7.5px);
-  }
-  .childDiv {
-    justify-content: center;
-  }
+.main-bottom {
+  margin-top: 28.5px;
+  display: flex;
+  width: 560px;
+  height: 168px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
+  flex-shrink: 0;
 }
 
-@media screen and (max-width: 450px) {
+.to-do,
+.done {
+  display: flex;
+  width: 264px;
+  height: 168px;
+  padding: 38px 19px;
+  justify-content: center;
+  align-items: center;
+  gap: 18px;
+  flex-shrink: 0;
+}
+
+.to-do-content,
+.done-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.greeting {
+  display: flex;
+  flex-direction: column;
+}
+
+.greeting-name {
+  color: var(--ligth-blue, #29ABE2);
+  font-family: Inter;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%
 }
