--- a/styles/summary.css
+++ b/styles/summary.css
@@ -2,14 +2,16 @@
 body {
   margin: 0;
   background: #F6F7F8;
+  color: #000;
 }
 
-h1 {
+h1,
+h2,
+h3 {
   margin: 0;
 }
 
 .font-64 {
-  color: #000;
   text-align: center;
   font-family: Inter;
   font-size: 64px;
@@ -19,7 +21,6 @@ h1 {
 }
 
 .font-61 {
-  color: #000;
   font-family: Inter;
   font-size: 61px;
   font-style: normal;
@@ -28,7 +29,6 @@ h1 {
 }
 
 .font-47 {
-  color: #2A3647;
   font-family: Inter;
   font-size: 47px;
   font-style: normal;
@@ -37,7 +37,6 @@ h1 {
 }
 
 .font-27 {
-  color: #2A3647;
   font-family: Inter;
   font-size: 27px;
   font-style: normal;
@@ -46,7 +45,6 @@ h1 {
 }
 
 .font-21 {
-  color: #2A3647;
   font-family: Inter;
   font-size: 21px;
   font-style: normal;
@@ -55,7 +53,6 @@ h1 {
 }
 
 .font-20 {
-  color: #2A3647;
   text-align: center;
   font-family: Inter;
   font-size: 20px;
@@ -65,7 +62,6 @@ h1 {
 }
 
 .font-16 {
-  color: #2A3647;
   font-family: Inter;
   font-size: 16px;
   font-style: normal;
@@ -83,7 +79,8 @@ h1 {
   cursor: pointer;
   background-color: rgba(42, 54, 71, 255);
   color: white;
-  transform: scale(1.05);
+  transform: scale(1.15);
+  transition: ease-in-out;
 }
 
 /*Main*/
@@ -136,7 +133,6 @@ h1 {
 .task-progress:hover,
 .task-feedback:hover {
   background-color: rgba(42, 54, 71, 255);
-  color: white !important;
 }
 
 
