--- a/styles/summary.css
+++ b/styles/summary.css
@@ -73,17 +73,23 @@ h3 {
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
   background: var(--white, #FFF);
   border-radius: 30px;
+  transition: all 0.2s ease-in-out;
 }
 
 .custom-border:hover {
   cursor: pointer;
   background-color: rgba(42, 54, 71, 255);
   color: white;
-  transform: scale(1.15);
+  transform: scale(1.08);
   transition: ease-in-out;
 }
 
 /*Main*/
+
+h3 {
+  color: #2A3647;
+}
+
 
 .summary {
   display: flex;
@@ -116,7 +122,7 @@ h3 {
   flex-shrink: 0;
 }
 
-.task-boad,
+.task-board,
 .task-progress,
 .task-feedback {
   display: flex;
@@ -134,8 +140,6 @@ h3 {
 .task-feedback:hover {
   background-color: rgba(42, 54, 71, 255);
 }
-
-
 
 
 .main-middle {
@@ -198,4 +202,52 @@ h3 {
   font-style: normal;
   font-weight: 700;
   line-height: 120%
+}
+
+/*Media Queries*/
+
+@media (max-height: 900px) {
+  .summary {
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 1140px) {
+  .summary {
+    margin-left: 280px;
+  }
+}
+
+
+
+@media (max-width: 428px) {
+  .summary {
+    margin-left: 0;
+    padding: 20px;
+  }
+
+  .task-board,
+  .task-progress,
+  .task-feedback {
+    width: 120px;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #task-count,
+  #progress-count,
+  #feedback-count {
+    font-size: 47px;
+  }
+
+  .main-top span {
+    font-size: 16px;
+  }
+
+  .main-top {
+    justify-content: flex-start;
+    gap: 15px;
+  }
 }
